# perception

./: pyproject.toml
1_week/: Exercise 1.ipynb  Exercise 2.ipynb
2_week/: Project.py  project_dense.py
3_week/: Exercise 2 - Stereo Block Matching.ipynb  project.py
Week 1/: Weekly Project.ipynb
Week 2/: Exercise 1 - Hough transform.ipynb  Exercise 2 - Feature Detection.ipynb
