[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.3",
    "imageio>=2.37.0",
    "imutils>=0.5.4",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "open3d>=0.19.0",
    "opencv-contrib-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
    "six>=1.17.0",
]
